--- a/kolibrios_skin_viewer.html
+++ b/kolibrios_skin_viewer.html
@@ -34,7 +34,13 @@
                 skinObj.margin.bottom = skinData.getUint16(params + 8, true);
                 skinObj.margin.top = skinData.getUint16(params + 10, true);
 
-                H6 = function(x) {return (x & 0x00FFFFFF).toString(16)};
+                let pad = function(num, len, rdx) {
+                    num = num.toString(rdx);
+                    while (num.length < len) num = "0" + num;
+                    return num;
+                }
+
+                H6 = function(x) {return pad(x & 0x00FFFFFF, 6, 16)};
 
                 skinObj.active = new Object();
                 skinObj.active.inner = H6(skinData.getUint32(params + 12, true));
