add header, description and link to the repo

--- a/index.html
+++ b/index.html
@@ -72,6 +72,10 @@
   <body>
     <center>
         <br><br>
+        <h2>KolibriOS skin viewer</h2>
+        <br>
+        Choose a .skn file and press View. Magic!
+        <br><br>
         <input type="file" id="file-input">
         <button onclick="readSkin()">View!</button>
     </center>
@@ -321,5 +325,12 @@
             reader.readAsArrayBuffer(file);
         }
     </script>
+
+    <footer>
+        <br><br>
+        <div style="float:right; text-align:right; margin-right: 100px;">
+            <a href="https://github.com/rgimad/kolibrios_skin_viewer">github.com/rgimad/kolibrios_skin_viewer</a><br><br>
+        </div>
+    </footer>
   </body>
 </html>
