fix font in window header

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             position: absolute;
             left: 5px;
             top: 4px;
-            font-weight: bold;
+            /* font-weight: bold; */
         }
         .window button {
             background: white;
